New method: export from production mode in local

--- a/index.html
+++ b/index.html
@@ -2,66 +2,17 @@
 <!DOCTYPE html>
 <html lang='en' ng-app='triple_canopy'>
   <head>
-  <script type="text/javascript">
-    WEB_SOCKET_SWF_LOCATION = "/__rack/WebSocketMain.swf";
-    
-  </script>
-  <script type="text/javascript" src="/__rack/swfobject.js"></script>
-  <script type="text/javascript" src="/__rack/web_socket.js"></script>
-
-<script type="text/javascript">
-  RACK_LIVERELOAD_PORT = 35729;
-</script>
-<script type="text/javascript" src="/__rack/livereload.js?host=localhost"></script>
-
-
     <meta charset='utf-8'>
     <meta content='IE=Edge,chrome=1' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport'>
-    <title>
-      Alongslide
-    </title>
-    <link href="/assets/application/main.css?body=1" media="all" rel="stylesheet" type="text/css" />
-    <link href="/assets/alongslide/gallery.css?body=1" media="all" rel="stylesheet" type="text/css" />
-    <link href="/assets/alongslide/image.css?body=1" media="all" rel="stylesheet" type="text/css" />
-    <link href="/assets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
-    <script src="/assets/modernizr.custom.41763.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.scrollTo.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/enquire.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/fastclick.js?body=1" type="text/javascript"></script>
-    <script src="/assets/application.js?body=1" type="text/javascript"></script>
-    <script src="/assets/application/debug_grid.js?body=1" type="text/javascript"></script>
-    <script src="/assets/webfont-1.4.10.js?body=1" type="text/javascript"></script>
-    <script src="/assets/application/webfonts.js?body=1" type="text/javascript"></script>
-    <script src="/assets/underscore-min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/keypress.min.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.mousewheel.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/gallery.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/image.js?body=1" type="text/javascript"></script>
+    <title>Alongslide</title>
+    <link href="/assets/application.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="/assets/application.js" type="text/javascript"></script>
     <!-- Additional frontend -->
-    <script src="/assets/regionFlow.js?body=1" type="text/javascript"></script>
-    <script src="/assets/skrollr.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.powertip.js?body=1" type="text/javascript"></script>
-    <script src="/assets/prefix.js?body=1" type="text/javascript"></script>
-    <script src="/assets/jquery.fitvids.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/alongslide.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/parser.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/layout.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide/scrolling.js?body=1" type="text/javascript"></script>
-    <script src="/assets/alongslide.js?body=1" type="text/javascript"></script>
-    <script src="/assets/project/styles.js?body=1" type="text/javascript"></script>
-    <script src="/assets/project/fixedAspect.js?body=1" type="text/javascript"></script>
-    <script src="/assets/project/loader.js?body=1" type="text/javascript"></script>
-    <script src="/assets/project/application.js?body=1" type="text/javascript"></script>
+    <script src="/assets/project/application.js" type="text/javascript"></script>
     <script>
       (function() {
-        Styles.prototype.loadLater('<link href="/assets/alongslide.css?body=1" media="screen" rel="stylesheet" type="text/css" />\
-      <link href="/assets/project/content.css?body=1" media="screen" rel="stylesheet" type="text/css" />\
-      <link href="/assets/project/custom.css?body=1" media="screen" rel="stylesheet" type="text/css" />\
-      <link href="/assets/project/readability.css?body=1" media="screen" rel="stylesheet" type="text/css" />\
-      <link href="/assets/project/application.css?body=1" media="screen" rel="stylesheet" type="text/css" />');
+        Styles.prototype.loadLater('<link href="/assets/project/application.css" media="screen" rel="stylesheet" type="text/css" />');
       
       }).call(this);
     </script>
