Export static demo from alongslide-demo repo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>Alongslide demo</title>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <link href="/assets/alongslide.css?body=1" media="all" rel="stylesheet" />
 <link href="/assets/application.css?body=1" media="all" rel="stylesheet" />
   <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
@@ -21,6 +21,7 @@
 <script src="/assets/alongslide/layout.js?body=1"></script>
 <script src="/assets/alongslide/scrolling.js?body=1"></script>
 <script src="/assets/alongslide.js?body=1"></script>
+<script src="/assets/demo.js?body=1"></script>
 <script src="/assets/application.js?body=1"></script>
   <script type="text/javascript">
     Styles.prototype.loadLater('<link href="/assets/demo.css?body=1" media="screen" rel="stylesheet" />')
@@ -109,6 +110,73 @@
   </div>
 </div>
 
+</div>
+<div id="markdown-source">
+  <a class="close" href="#">Close</a>
+  <div class="source">
+    <h3>Alongslide/Markdown Source for this page</h3>
+    <pre class="indented directive">    + panel intro pin top two-thirds now</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    # **Alongslide** is a responsive, parallax-inspired presentation framework for long-form reading on the web, employing a lightweight templating syntax for [Markdown](http://daringfireball.net/projects/markdown/). Scroll right »</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + panel footer pin bottom one-third now</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    The various components of Alongslide will be open-sourced by early 2014.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    [Show Markdown Source](#)</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    Created by and for [Triple Canopy](http://canopycanopycanopy.com). Copyright 2013, Canopy Canopy Canopy, Inc.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + unpin intro</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + section technology </pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + panel technology-layers pin top two-thirds</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    ### Technology layers</pre>
+<pre class="indented in-block">    1. A fine-tuned parallax-like **scrolling framework** built on a [fork](https://github.com/triplecanopy/skrollr) of [Skrollr](http://prinzhorn.github.io/skrollr/)</pre>
+<pre class="indented in-block">    - **Flowing text columns** using a [custom implementation](https://github.com/triplecanopy/region-flow) of the emerging [CSS Regions](http://dev.w3.org/csswg/css-regions/) spec</pre>
+<pre class="indented in-block">    - A responsive-and-beyond layout logic in CSS+JS</pre>
+<pre class="indented in-block">    - A lightweight **templating syntax for Markdown** implemented in Ruby with [Redcarpet](https://github.com/vmg/redcarpet) and [Treetop](http://treetop.rubyforge.org/)</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + unpin technology-layers</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + unpin footer</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + panel aspect fullscreen fade-out</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    ### Alongslide puts layout first, respecting the aspect ratio of the content area at all window sizes and resolutions.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    ### On desktop, press `alt-g` to see the grid(s)—and resize the window to any size or shape.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    #### Try it on mobile, too.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + section structure</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented directive">    + panel this-is-a-panel pin right now fade-out</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    ## This is a panel</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    **Panels** function like sidebars which can interrupt or supplement the flowing text.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    In Alongslide Markdown, structural elements are specified by indented blocks of text (traditionally used for `&lt;code&gt;`) to show visually that they sit outside the primary flow.</pre>
+<pre class="in-block">&nbsp;</pre>
+<pre class="indented in-block">    They may each specify transitions—either fading or sliding in.</pre>
+<pre class="">&nbsp;</pre>
+<pre class="">## This is section text</pre>
+<pre class="">&nbsp;</pre>
+<pre class="">Section text continues to flow, automatically breaking up into columns, while **panels** remain fixed.</pre>
+<pre class="">&nbsp;</pre>
+<pre class="">For an example of a longer text, see the below an excerpt from the upcoming Alongslide announcement:</pre>
+<pre class="">&nbsp;</pre>
+<pre class="">&gt; By integrating recorded and textual media, digital publishing conceives of the experience of reading in both temporal and spatial terms; whereas a book might contain paragraphs and a series of images, only digital forms can map the particular experience of one onto the other by regulating the way in which the reader progresses through a text. The syntax of Alongslide emphasizes—even extols—this development by enabling editors to define the “start” and “end” points of content elements within a layout, as though they were being arranged on a timeline. (In fact, Alongslide’s underlying scrolling mechanism is based on a fundamental technique borrowed from the domain of animation and motion design: the use of key frames, which articulate transition points in the linear flow of data.) As user interfaces are increasingly imbued with virtual tactility, thanks to animated interaction cues, digital reading platforms will continue to incorporate motion design and animation—and justly so, as they have defined the experience of screen-based forms since the medium originated 125 years ago.</pre>
+<pre class="">&nbsp;</pre>
+<pre class="indented directive">    + unpin this-is-a-panel</pre>
+<pre class="">&nbsp;</pre>
+<pre class="indented directive">    + panel philosophy fullscreen fade-in</pre>
+<pre class="">&nbsp;</pre>
+<pre class="indented in-block">    ### As with Markdown, a philosophical principle of Alongslide is that plain-text authoring environments can be just as powerful as WYSIWIG, and further enable (and encourage) writing solid, structural markup.</pre>
+  </div>
 </div>
 
 
