Viewport meta for tablets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Alongslide demo</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="/assets/alongslide.css?body=1" media="all" rel="stylesheet" />
 <link href="/assets/application.css?body=1" media="all" rel="stylesheet" />
   <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
