Source is public

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 <div class='alongslide bottom now one-third panel pin show' data-alongslide-id='footer'>
   <div class='contents'>
     <div class='inner'>
+      <p>
+        Alongslide's <a href="https://github.com/triplecanopy/alongslide">source code</a> is now publicly available.
+      </p>
       <p>The various components of Alongslide will be open-sourced by early 2014.</p>
       <p><a href="#">Show Markdown Source</a></p>
       <p>Created by and for <a href="http://canopycanopycanopy.com">Triple Canopy</a>. Copyright 2013, Canopy Canopy Canopy, Inc.</p>
@@ -59,7 +62,7 @@
   <div class='contents'>
     <div class='inner'>
       <h3>Technology layers</h3>
-      
+
       <ol>
       <li>A fine-tuned parallax-like <strong>scrolling framework</strong> built on a <a href="https://github.com/triplecanopy/skrollr">fork</a> of <a href="http://prinzhorn.github.io/skrollr/">Skrollr</a></li>
       <li><strong>Flowing text columns</strong> using a <a href="https://github.com/triplecanopy/region-flow">custom implementation</a> of the emerging <a href="http://dev.w3.org/csswg/css-regions/">CSS Regions</a> spec</li>
